# ConBot

./: .gitignore  LICENSE  README.md  pyproject.toml
conbot/: __init__.py  __main__.py  bootstrap.py  format_graph.py  menu.py  output_handler.py  process_control.py  scanner.py  ui.py
conbot/engines/: __init__.py  ffmpeg.py  image.py  libreoffice.py  pandoc.py  spreadsheets.py
docs/: FSD.md  FTL.md  PRD.md  S&A.md  TRD.md
